[package]
edition = "2021"
name = "w3s"
version = "0.1.0-alpha"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt"] }

# for ipfs car file creation
iroh-car = { version= "0.1", path = "iroh-car" }
multihash = "0.16"
cid = "0.8"
ipld-pb = { package = "libipld-pb", version = "0.13" }
unixfs-v1 = "0.2"
quick-protobuf = "0.8"

# --- optional ---
rand = { version = "0.8", optional = true }

## encryption
aes-gcm = { version = "0.9", optional = true }
argon2 = { version = "0.4", optional = true }

## compression
zstd = { version = "0.11", optional = true }

[features]
compression = ["rand", "zstd"]
encryption = ["rand", "aes-gcm", "argon2"]
